--- a/web/index.html
+++ b/web/index.html
@@ -95,7 +95,7 @@
             <form></form>
           </div>
           <div class="col col-lg-6 col-12">
-            <h4>Hypothetical Standings</h4>
+            <h4>Updated Standings</h4>
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
@@ -114,6 +114,9 @@
               </thead>
               <tbody></tbody>
             </table>
+            <div class="mb-3" id="tie">
+              * Head to head and disciplinary points not accounted for in tie breaker
+            </div>
             <button type="button" class="btn btn-secondary mb-2" id="reset">
               Reset scores
             </button>
